Fix: Align "show entries" text correctly for cases where the Semantic UI JS is not available on the page

--- a/media/css/dataTables.semanticui.css
+++ b/media/css/dataTables.semanticui.css
@@ -53,6 +53,10 @@ table.dataTable.table.nowrap td {
   white-space: nowrap;
 }
 
+div.dataTables_wrapper div.dataTables_length select {
+  vertical-align: middle;
+  min-height: 2.7142em;
+}
 div.dataTables_wrapper div.dataTables_length .ui.selection.dropdown {
   min-width: 0;
 }
